# Grundlagen_Cpp

./: .gitignore  CMakeLists.txt  imperialships.txt  main.cpp
Task01/: CMakeLists.txt  adventure.cpp  room.h
Task02/: scopedemo.cpp  scopetimer.cpp  scopetimer.h
Task03/: CMakeLists.txt  dynlistdemo.cpp  object.h
Task04/: CMakeLists.txt  program.cpp  program.h  randomchar.cpp  randomchar.h  testobject.cpp  testobject.h
Task06/: CMakeLists.txt  program.cpp  valuenode.cpp
Task08/: CMakeLists.txt  planet.h  program.h  spacegame.cpp  spacegame.h  spaceship.cpp  spaceship.h  target.h
Task08/ProgramTest/: ProgramTest.pro  (+6 more)
Task09/: CMakeLists.txt  consolepolicy.cpp  filepolicy.cpp  filepolicy.h  logger.cpp  logger.h
Task1/: CMakeLists.txt  adventure.cpp  adventure.h  room.cpp
Task10/: CMakeLists.txt  hybridarray.h  program.cpp  program.h
Task11/: CMakeLists.txt  fleet.cpp  fleet.h  main.cpp  main.h  spaceshipfactory.cpp
Task2/: CMakeLists.txt  scopedemo.cpp  scopedemo.h  scopetimer.cpp  scopetimer.h
Task3/: dynamicobjectlist.cpp  dynamicobjectlist.h  dynlistdemo.cpp  dynlistdemo.h  object.cpp  object.h
Task4/: program.cpp  program.h  randomchar.cpp  randomchar.h  testobject.cpp  testobject.h
Task5/: CMakeLists.txt  dynamicobjectlist.cpp  dynamicobjectlist.h  object.cpp  object.h  program.cpp  program.h
Task6/: node.cpp  node.h  operators.cpp  operators.h  program.cpp  program.h  valuenode.cpp  valuenode.h
Task7/: CMakeLists.txt  main.cpp  main.h  myvector.h
Task8/: CMakeLists.txt  deathstar.cpp  deathstar.h  planet.cpp  planet.h  program.cpp  program.h  spacegame.cpp  spacegame.h  spaceship.cpp  spaceship.h  target.cpp  target.h
Task9/: consolepolicy.h  filepolicy.h  logger.cpp  logger.h  program.cpp  program.h
common/: CMakeLists.txt  consoletools.cpp  consoletools.h  log.cpp  log.h  mathtools.cpp  mathtools.h  taskbase.cpp  taskbase.h
(+10 files in other folders)
