project(Grundlagen_Cpp)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wpedantic -Wall -Werror")
set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)
add_subdirectory("${PROJECT_SOURCE_DIR}/common")
add_subdirectory("${PROJECT_SOURCE_DIR}/Task01")
add_subdirectory("${PROJECT_SOURCE_DIR}/Task02")
add_subdirectory("${PROJECT_SOURCE_DIR}/Task03")
add_subdirectory("${PROJECT_SOURCE_DIR}/Task04")
add_subdirectory("${PROJECT_SOURCE_DIR}/Task05")
add_subdirectory("${PROJECT_SOURCE_DIR}/Task06")
add_subdirectory("${PROJECT_SOURCE_DIR}/Task07")
add_subdirectory("${PROJECT_SOURCE_DIR}/Task08")
add_subdirectory("${PROJECT_SOURCE_DIR}/Task09")
add_subdirectory("${PROJECT_SOURCE_DIR}/Task10")
add_subdirectory("${PROJECT_SOURCE_DIR}/Task11")
add_executable(${PROJECT_NAME} ${SOURCE} ${HEADERS})
